k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: student-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: samidhawani.in
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /students
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
